added the scanner and generator for barcodes

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jsbarcode": "^3.11.6",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-qr-barcode-scanner": "^2.0.0",
     "sass": "^1.80.4"
   },
   "devDependencies": {
