--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-qr-barcode-scanner": "^2.0.0",
     "sass": "^1.80.4"
   },
