--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "jsbarcode": "^3.11.6",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-qr-barcode-scanner": "^2.0.0",
     "sass": "^1.80.4"
   },
