--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "html5-qrcode": "^2.3.8",
     "js-cookie": "^3.0.5",
     "jsbarcode": "^3.11.6",
     "next": "14.2.15",
