--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@undecaf/barcode-detector-polyfill": "^0.9.21",
     "axios": "^1.7.7",
+    "dynamsoft-camera-enhancer": "^3.3.1",
+    "dynamsoft-javascript-barcode": "^9.6.11",
     "html5-qrcode": "^2.3.8",
     "js-cookie": "^3.0.5",
     "jsbarcode": "^3.11.6",
     "next": "14.2.15",
     "react": "^18",
+    "react-barcode-scanner": "^3.0.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
