--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@undecaf/barcode-detector-polyfill": "^0.9.21",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "dynamsoft-camera-enhancer": "^3.3.1",
     "dynamsoft-javascript-barcode": "^9.6.11",
     "html5-qrcode": "^2.3.8",
@@ -20,6 +21,7 @@
     "quagga": "^0.12.1",
     "react": "^18",
     "react-barcode-scanner": "^3.0.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
